--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,7 +6,9 @@
 @import 'libs';
 @import 'global';
 
+@import 'parts/menu';
 @import 'parts/header';
+@import 'parts/mobile-nav';
 @import 'parts/hero';
 @import 'parts/popular';
 @import 'parts/categories';
