--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -18,7 +18,7 @@
       </div>
       <div class="footer__nav">
         <h3 class="sr-only">Навігація по сайту</h3>
-        <ul class="menu footer__menu">
+        <ul class="footer__menu">
           <li class="menu__item">
             <a class="menu__link" href="#">Як це працює</a>
           </li>
@@ -82,13 +82,15 @@
             <li class="social__item">
               <a class="social__link" href="#">
                 <span class="sr-only">Перейти до Твіттер</span>
-                <span class="social__icon" style="-webkit-mask-image: url('../../images/sprite.svg#icon-twitter'); mask-image: url('../../images/sprite.svg#icon-twitter');"></span>
+                <span class="social__icon"
+                  style="-webkit-mask-image: url('../../images/sprite.svg#icon-twitter'); mask-image: url('../../images/sprite.svg#icon-twitter');"></span>
               </a>
             </li>
             <li class="social__item">
               <a class="social__link" href="#">
                 <span class="sr-only">Перейти до Інстаграм</span>
-                <span class="social__icon" style="-webkit-mask-image: url('../../images/sprite.svg#icon-instagram'); mask-image: url('../../images/sprite.svg#icon-instagram');"></span>
+                <span class="social__icon"
+                  style="-webkit-mask-image: url('../../images/sprite.svg#icon-instagram'); mask-image: url('../../images/sprite.svg#icon-instagram');"></span>
               </a>
             </li>
           </ul>
