--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -2,10 +2,10 @@
   <div class="container">
       
       <nav class="header__nav">
-        <a class="logo" href="#">
+        <a class="logo header__logo" href="#">
           <img class="logo__img" src="../../images/logo.svg" alt="site logo" width="200" height="39">
         </a>
-        <ul class="menu">
+        <ul class="menu header__menu">
           <li class="menu__item">
             <a class="menu__link menu__link--current" href="#">Головна</a>
           </li>
@@ -26,7 +26,67 @@
             </span>
             <span class="btn-counter">4</span>
           </button>
+          <button class="burger icon icon--burger-menu" type="button">
+            <span class="sr-only">Показати меню</span>
+          </button>
         </div>
       </nav>
+  </div>
+  <div class="mobile-nav">
+    <div class="mobile-nav__head">
+      <a class="logo" href="#">
+        <img class="logo__img" src="../../images/logo.svg" alt="site logo" width="200" height="39">
+      </a>
+      <button class="close-btn icon icon--close" type="button">
+        <span class="sr-only">Сховати меню</span>
+      </button>
+    </div>
+    <ul class="menu mobile-nav__menu">
+      <li class="menu__item">
+        <a class="menu__link menu__link--current" href="#">Головна</a>
+      </li>
+      <li class="menu__item">
+        <a class="menu__link" href="#">Страви</a>
+      </li>
+      <li class="menu__item">
+        <a class="menu__link" href="#">Контакти</a>
+      </li>
+    </ul>
+    <adress class="contacts mobile-nav__contacts">
+      <ul class="contacts__list">
+        <li class="contacts__item">
+          <a class="contacts__link icon icon--address" href="#">вул. Т.Г.Шевченка, 1</a>
+        </li>
+        <li class="contacts__item">
+          <a class="contacts__link icon icon--phone" href="tel:+380501112233">380501112233</a>
+        </li>
+        <li class="contacts__item">
+          <a class="contacts__link icon icon--mail" href="mailto:support@sfood.com">support@sfood.com</a>
+        </li>
+      </ul>
+      <ul class="social">
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="sr-only">Перейти до Фейсбук</span>
+            <span class="social__icon"
+              style="-webkit-mask-image: url('../../images/sprite.svg#icon-facebook'); mask-image: url('../../images/sprite.svg#icon-facebook')"></span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="sr-only">Перейти до Твіттер</span>
+            <span class="social__icon"
+              style="-webkit-mask-image: url('../../images/sprite.svg#icon-twitter'); mask-image: url('../../images/sprite.svg#icon-twitter');"></span>
+          </a>
+        </li>
+        <li class="social__item">
+          <a class="social__link" href="#">
+            <span class="sr-only">Перейти до Інстаграм</span>
+            <span class="social__icon"
+              style="-webkit-mask-image: url('../../images/sprite.svg#icon-instagram'); mask-image: url('../../images/sprite.svg#icon-instagram');"></span>
+          </a>
+        </li>
+      </ul>
+    </adress>
   </div>
 </header>
