--- a/app/html/components/_restaurant.html
+++ b/app/html/components/_restaurant.html
@@ -3,133 +3,137 @@
     <h2 class="title restaurant__title">
       Найкращі ресторани
     </h2>
-    <ul class="restaurant__list cols">
-      <li class="restaurant__item">
-        <article class="content-card">
-          <figure href="" class="content-card__head">
-            <img class="content-card__img" src="../../images/restaraunts/resto_1.jpg" alt="Blaze Pizza Restaurant" width="370" height="300">
-          </figure>
-          <div class="content-card__wrapper">
-            <a href="" class="content-card__link">
-              <h3 class="content-card__title">Blaze Pizza</h3>
-            </a>
-            <div class="content-card__info">
-              <div class="content-card__time icon icon--time">
-                <span class="sr-only">Заклад відкрито в такий час</span> 
-                <time datetime="11:00">11:00</time> - <time datetime="22:00">22:00</time>
-              </div>
-              <a class="content-card__btn btn icon icon--arrow-right" href="#">
-                <div class="sr-only">Переглянути детальніше</div>
+    <div class="restaurant__slider">
+      <ul class="restaurant__list swiper-wrapper cols">
+        <li class="restaurant__item swiper-slide">
+          <article class="content-card">
+            <figure href="" class="content-card__head">
+              <img class="content-card__img" src="../../images/restaraunts/resto_1.jpg" alt="Blaze Pizza Restaurant" width="370" height="300">
+            </figure>
+            <div class="content-card__wrapper">
+              <a href="" class="content-card__link">
+                <h3 class="content-card__title">Blaze Pizza</h3>
               </a>
-            </div>
-          </div>
-        </article>
-      </li>
-      <li class="restaurant-list__item">
-        <article class="content-card">
-          <figure href="" class="content-card__head">
-            <img class="content-card__img" src="../../images/restaraunts/resto_2.jpg" alt="Pizza Runcho Restaurant" width="370" height="300">
-          </figure>
-          <div class="content-card__wrapper">
-            <a href="" class="content-card__link">
-              <h3 class="content-card__title">Pizza Runcho</h3>
-            </a>
-            <div class="content-card__info">
-              <div class="content-card__time icon icon--time">
-                <span class="sr-only">Заклад відкрито в такий час</span> 
-                <time datetime="12:00">12:00</time> - <time datetime="21:00">21:00</time>
+              <div class="content-card__info">
+                <div class="content-card__time icon icon--time">
+                  <span class="sr-only">Заклад відкрито в такий час</span> 
+                  <time datetime="11:00">11:00</time> - <time datetime="22:00">22:00</time>
+                </div>
+                <a class="content-card__btn btn icon icon--arrow-right" href="#">
+                  <div class="sr-only">Переглянути детальніше</div>
+                </a>
               </div>
-              <a class="content-card__btn btn icon icon--arrow-right" href="#">
-                <div class="sr-only">Переглянути детальніше</div>
-              </a>
             </div>
-          </div>
-        </article>
-      </li>
-      <li class="restaurant-list__item">
-        <article class="content-card">
-          <figure href="" class="content-card__head">
-            <img class="content-card__img" src="../../images/restaraunts/resto_3.jpg" alt="Pizza Hut Restaurant" width="370" height="300">
-          </figure>
-          <div class="content-card__wrapper">
-            <a href="" class="content-card__link">
-              <h3 class="content-card__title">Pizza Hut</h3>
-            </a>
-            <div class="content-card__info">
-              <div class="content-card__time icon icon--time">
-                <span class="sr-only">Заклад відкрито в такий час</span> 
-                <time datetime="11:00">11:00</time> - <time datetime="22:00">22:00</time>
+          </article>
+        </li>
+        <li class="restaurant__item swiper-slide">
+          <article class="content-card">
+            <figure href="" class="content-card__head">
+              <img class="content-card__img" src="../../images/restaraunts/resto_2.jpg" alt="Pizza Runcho Restaurant" width="370" height="300">
+            </figure>
+            <div class="content-card__wrapper">
+              <a href="" class="content-card__link">
+                <h3 class="content-card__title">Pizza Runcho</h3>
+              </a>
+              <div class="content-card__info">
+                <div class="content-card__time icon icon--time">
+                  <span class="sr-only">Заклад відкрито в такий час</span> 
+                  <time datetime="12:00">12:00</time> - <time datetime="21:00">21:00</time>
+                </div>
+                <a class="content-card__btn btn icon icon--arrow-right" href="#">
+                  <div class="sr-only">Переглянути детальніше</div>
+                </a>
               </div>
-              <a class="content-card__btn btn icon icon--arrow-right" href="#">
-                <div class="sr-only">Переглянути детальніше</div>
-              </a>
             </div>
-          </div>
-        </article>
-      </li>
-      <li class="restaurant-list__item">
-        <article class="content-card">
-          <figure href="" class="content-card__head">
-            <img class="content-card__img" src="../../images/restaraunts/resto_4.jpg" alt="McDonald`s Restaurant" width="370" height="300">
-          </figure>
-          <div class="content-card__wrapper">
-            <a href="" class="content-card__link">
-              <h3 class="content-card__title">McDonald`s</h3>
-            </a>
-            <div class="content-card__info">
-              <div class="content-card__time icon icon--time">
-                <span class="sr-only">Заклад відкрито в такий час</span> 
-                <time datetime="06:00">06:00</time> - <time datetime="23:00">23:00</time>
+          </article>
+        </li>
+        <li class="restaurant__item swiper-slide">
+          <article class="content-card">
+            <figure href="" class="content-card__head">
+              <img class="content-card__img" src="../../images/restaraunts/resto_3.jpg" alt="Pizza Hut Restaurant" width="370" height="300">
+            </figure>
+            <div class="content-card__wrapper">
+              <a href="" class="content-card__link">
+                <h3 class="content-card__title">Pizza Hut</h3>
+              </a>
+              <div class="content-card__info">
+                <div class="content-card__time icon icon--time">
+                  <span class="sr-only">Заклад відкрито в такий час</span> 
+                  <time datetime="11:00">11:00</time> - <time datetime="22:00">22:00</time>
+                </div>
+                <a class="content-card__btn btn icon icon--arrow-right" href="#">
+                  <div class="sr-only">Переглянути детальніше</div>
+                </a>
               </div>
-              <a class="content-card__btn btn icon icon--arrow-right" href="#">
-                <div class="sr-only">Переглянути детальніше</div>
-              </a>
             </div>
-          </div>
-        </article>
-      </li>
-      <li class="restaurant-list__item">
-        <article class="content-card">
-          <figure href="" class="content-card__head">
-            <img class="content-card__img" src="../../images/restaraunts/resto_5.jpg" alt="KFC" width="370" height="300">
-          </figure>
-          <div class="content-card__wrapper">
-            <a href="" class="content-card__link">
-              <h3 class="content-card__title">KFC</h3>
-            </a>
-            <div class="content-card__info">
-              <div class="content-card__time icon icon--time">
-                <span class="sr-only">Заклад відкрито в такий час</span> 
-                <time datetime="06:00">06:00</time> - <time datetime="23:00">23:00</time>
+          </article>
+        </li>
+        <li class="restaurant__item swiper-slide">
+          <article class="content-card">
+            <figure href="" class="content-card__head">
+              <img class="content-card__img" src="../../images/restaraunts/resto_4.jpg" alt="McDonald`s Restaurant" width="370" height="300">
+            </figure>
+            <div class="content-card__wrapper">
+              <a href="" class="content-card__link">
+                <h3 class="content-card__title">McDonald`s</h3>
+              </a>
+              <div class="content-card__info">
+                <div class="content-card__time icon icon--time">
+                  <span class="sr-only">Заклад відкрито в такий час</span> 
+                  <time datetime="06:00">06:00</time> - <time datetime="23:00">23:00</time>
+                </div>
+                <a class="content-card__btn btn icon icon--arrow-right" href="#">
+                  <div class="sr-only">Переглянути детальніше</div>
+                </a>
               </div>
-              <a class="content-card__btn btn icon icon--arrow-right" href="#">
-                <div class="sr-only">Переглянути детальніше</div>
-              </a>
             </div>
-          </div>
-        </article>
-      </li>
-      <li class="restaurant-list__item">
-        <article class="content-card">
-          <figure href="" class="content-card__head">
-            <img class="content-card__img" src="../../images/restaraunts/resto_6.jpg" alt="Star Burgers Restaurant" width="370" height="300">
-          </figure>
-          <div class="content-card__wrapper">
-            <a href="" class="content-card__link">
-              <h3 class="content-card__title">Star Burgers</h3>
-            </a>
-            <div class="content-card__info">
-              <div class="content-card__time icon icon--time">
-                <span class="sr-only">Заклад відкрито в такий час</span> 
-                <time datetime="09:00">09:00</time> - <time datetime="21:00">21:00</time>
+          </article>
+        </li>
+        <li class="restaurant__item swiper-slide">
+          <article class="content-card">
+            <figure href="" class="content-card__head">
+              <img class="content-card__img" src="../../images/restaraunts/resto_5.jpg" alt="KFC" width="370" height="300">
+            </figure>
+            <div class="content-card__wrapper">
+              <a href="" class="content-card__link">
+                <h3 class="content-card__title">KFC</h3>
+              </a>
+              <div class="content-card__info">
+                <div class="content-card__time icon icon--time">
+                  <span class="sr-only">Заклад відкрито в такий час</span> 
+                  <time datetime="06:00">06:00</time> - <time datetime="23:00">23:00</time>
+                </div>
+                <a class="content-card__btn btn icon icon--arrow-right" href="#">
+                  <div class="sr-only">Переглянути детальніше</div>
+                </a>
               </div>
-              <a class="content-card__btn icon icon--arrow-right btn" href="#">
-                <div class="sr-only">Переглянути детальніше</div>
-              </a>
             </div>
-          </div>
-        </article>
-      </li>
-    </ul>
+          </article>
+        </li>
+        <li class="restaurant__item swiper-slide">
+          <article class="content-card">
+            <figure href="" class="content-card__head">
+              <img class="content-card__img" src="../../images/restaraunts/resto_6.jpg" alt="Star Burgers Restaurant" width="370" height="300">
+            </figure>
+            <div class="content-card__wrapper">
+              <a href="" class="content-card__link">
+                <h3 class="content-card__title">Star Burgers</h3>
+              </a>
+              <div class="content-card__info">
+                <div class="content-card__time icon icon--time">
+                  <span class="sr-only">Заклад відкрито в такий час</span> 
+                  <time datetime="09:00">09:00</time> - <time datetime="21:00">21:00</time>
+                </div>
+                <a class="content-card__btn icon icon--arrow-right btn" href="#">
+                  <div class="sr-only">Переглянути детальніше</div>
+                </a>
+              </div>
+            </div>
+          </article>
+        </li>
+      </ul>
+
+      <div class="restaurant__dots"></div>
+    </div>
   </div>
 </section>
