--- a/app/scss/parts/_features.scss
+++ b/app/scss/parts/_features.scss
@@ -1,7 +1,7 @@
 .features {
 
   &__wrapper {
-    min-height: 585px;
+    min-height: size(585, 462);
     padding: 0 size(70, 0);
     margin: 0 auto;
     display: flex;
@@ -14,6 +14,7 @@
 
   &__content {
     max-width: 470px;
+    padding: 25px 0 31px;
     background-color: rgba($white, 0.85);
     align-self: flex-end;
   }
@@ -24,9 +25,9 @@
   }
 
   &__description {
-    font-size: 20px;
+    font-size: size(20, 18);
     line-height: 1.5;
-    margin-bottom: 30px;
+    margin-bottom: size(30, 20);
   }
 
   &__list {
@@ -34,15 +35,15 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
-    margin-bottom: 30px;
+    margin-bottom: size(30, 20);
   }
 
   &__item {
-    font-size: 24px;
+    font-size: size(24, 18);
     line-height: 1.5;
     color: $darkBlue-900;
     justify-content: flex-start;
-    gap: 30px;
+    gap: size(30, 10);
 
     &::before {
       min-width: 34px;
