--- a/app/scss/parts/_hero.scss
+++ b/app/scss/parts/_hero.scss
@@ -8,8 +8,23 @@ $rightPos: calc((100vw - 1170px) / 2);
   background-size: contain;
   background-position: right $rightPos center;
 
-  &__title {
+  @include r($size-lg) {
+    min-height: size(660, 300, 1200);
+    background-position: right 15px center;
+    background-size: size(560, 254) auto;
+  }
+
+  @include r($size-sm) {
+    background-color: rgba($white, 0.85);
+    background-blend-mode: overlay;
+  }
+
+  &__content {
+    padding: 25px 0;
     max-width: 480px;
+  }
+
+  &__title {
     font-family: 'Rubik', sans-serif;
     @include fz(66, 40);
     color: $darkBlue-900;
@@ -25,7 +40,7 @@ $rightPos: calc((100vw - 1170px) / 2);
     max-width: 450px;
     line-height: 1.5;
     margin-bottom: 20px;
-    font-size: 20px;
+    font-size: size(20, 16);
   }
 
   &__links {
