--- a/app/scss/parts/_product-card.scss
+++ b/app/scss/parts/_product-card.scss
@@ -1,5 +1,5 @@
 .product-card {
-  height: 100%;
+  min-height: 299px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,17 +11,18 @@
   outline: 1px solid $silver-200;
   transition: outline-color 0.3s ease-in-out;
 
-  &:hover{
+  &:hover {
     outline-color: $orange-900;
   }
 
   &__link {
     outline-color: $orange-900;
-    &:first-child{
+
+    &:first-child {
       order: 2;
     }
 
-    &:nth-child(2){
+    &:nth-child(2) {
       order: 1;
     }
   }
@@ -42,10 +43,10 @@
     line-height: 1.2;
     color: $darkBlue-900;
     order: 3;
-    margin-top: auto; 
+    margin-top: auto;
   }
 
-  &__btn{
+  &__btn {
     order: 4;
   }
 }
