--- a/app/scss/parts/_restaurants.scss
+++ b/app/scss/parts/_restaurants.scss
@@ -1,5 +1,46 @@
 .restaurant {
-  &__list{
-  
+  &__list {
+    box-sizing: border-box !important;
+
+    @include r($size-md) {
+      grid-template-columns: repeat(2, minmax(auto, 370px));
+      gap: 10px;
+      justify-content: center;
+    }
+
+    @include r($size-xs) {
+      display: flex;
+      justify-content: initial;
+      gap: initial;
+      margin-bottom: 30px;
+    }
+
+    .content-card {
+      @include r($size-xs) {
+        margin: 0 auto;
+      }
+    }
+  }
+
+  &__slider {
+    overflow: visible;
+
+    @include r($size-xs) {
+      overflow: hidden;
+    }
+  }
+
+  &__dots {
+    @extend .reviews__dots;
+    justify-content: center;
+    padding: 2px;
+  }
+
+  &__dot {
+    @extend .reviews__dot;
+
+    &--active {
+      @extend .reviews__dot--active;
+    }
   }
 }
