--- a/app/scss/parts/_reviews.scss
+++ b/app/scss/parts/_reviews.scss
@@ -1,6 +1,10 @@
 .reviews {
   &__list {
     margin-bottom: 30px;
+
+    @include r($size-xs) {
+      margin-bottom: 0;
+    }
   }
 
   &__actions {
@@ -37,22 +41,38 @@
       transition: background-color 0.3s ease-in-out;
     }
 
+    @include r($size-xs) {
+      position: absolute;
+      top: 30px;
+    }
+
     &--prev {
       &::before {
         mask-image: url('../../images/sprite.svg#icon-left');
+      }
+
+      @include r($size-xs) {
+        left: calc(50% - 140px);
+      }
+    }
+
+    &--next {
+      @include r($size-xs) {
+        right: calc(50% - 140px);
       }
     }
 
     &:disabled {
       border-color: $gray;
+
       &:focus,
       &:hover,
-      &:active{
+      &:active {
         border-color: inherit;
         outline-color: transparent;
         background-color: inherit;
 
-        &::before{
+        &::before {
           background-color: $gray;
         }
       }
@@ -116,4 +136,14 @@
       background-color: rgba($orange-900, 0.5);
     }
   }
+
+  &__slider {
+
+    .reviews__dots {
+      @include r($size-xs) {
+        display: none;
+      }
+    }
+  }
+
 }
