--- a/app/html/components/_restaurant.html
+++ b/app/html/components/_restaurant.html
@@ -3,7 +3,7 @@
     <h2 class="title restaurant__title">
       Найкращі ресторани
     </h2>
-    <div class="restaurant__slider">
+    <d class="restaurant__slider">
       <ul class="restaurant__list swiper-wrapper cols">
         <li class="restaurant__item swiper-slide">
           <article class="content-card">
@@ -134,6 +134,6 @@
       </ul>
 
       <div class="restaurant__dots"></div>
-    </div>
+    </d iv>
   </div>
 </section>
