--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -20,5 +20,7 @@
 @import 'parts/quote';
 @import 'parts/app';
 @import 'parts/breadcrumbs';
+@import 'parts/catalog';
+@import 'parts/pagination';
 
 @import 'parts/footer';
