--- a/app/html/components/_footer-scripts.html
+++ b/app/html/components/_footer-scripts.html
@@ -1,5 +1,6 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script src="../../js/mixitup.min.js"></script>
+<script src="../../../node_modules/jquery-form-styler/dist/jquery.formstyler.min.js"></script>
 <script src="../../js/main.min.js"></script>
 </body>
 
