--- a/app/scss/parts/_mobile-nav.scss
+++ b/app/scss/parts/_mobile-nav.scss
@@ -75,6 +75,11 @@
     min-width: 18px;
     height: 18px;
   }
+
+  &__catalog {
+    margin-right: 20px;
+    margin-left: auto;
+  }
 }
 
 .lock {
